# Dolphin

./: .gitignore  README.md  pyproject.toml
dolphin/: __init__.py  distribution.py  utils.py
dolphin/modules/: __init__.py  aggregations.py  conditions.py
dolphin/provenances/: __init__.py  damp.py  damp_custom.py  dmmp.py  dtkp_am.py  provenance.py
experiments/clutrr/: run.py
experiments/hwf/: hwf.py
experiments/mnist/: how_many_3.py  prod_n.py  sum_2.py  sum_4_self.py  sum_n.py
experiments/mugen/: AlignModule.py  SVMugenDataset.py  modules.py  run.py  s3d.py
experiments/pathfinder/: run_128.py  run_256.py  run_32.py
torchql/: database.py  query.py  table.py  utils.py
torchql/sqrl/: sqr.py  sqrl.py
